Fix dark mode stylings, new hero stat changes, settings dialog bug, dark mode default on

--- a/app/css/darktheme.css
+++ b/app/css/darktheme.css
@@ -9,6 +9,7 @@
     --btn-color: #2D3136;
     --accent-green: #00BE9B;
     --scrollbar-grey: #5a5a5a;
+    --link-blue: #1e90ff;
 }
 
 /* scrollbar */
@@ -95,6 +96,10 @@ body {
 
 .ms-drop ul>li.hide-radio.selected {
     background-color: var(--accent-red);
+}
+
+a {
+    color: var(--link-blue);
 }
 
 select {
@@ -224,6 +229,10 @@ input[type=checkbox]:checked:after {
 
 .swal2-container .swal2-popup {
     background: var(--bg-color);
+}
+
+.swal2-html-container {
+    color: var(--font-color);
 }
 
 .swal2-content,
